--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fish Game</title>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <div id="fishbowl" class="fishbowl">
@@ -32,4 +33,5 @@
       </div>
     </div>
   </body>
+  <script src="./main.js"></script>
 </html>
